--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,3 +44,15 @@ markdown_extensions:
       guess_lang: false
   - toc:
       permalink: true
+
+
+jobs:
+  build:
+    name: Deploy docs
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout master
+        uses: actions/checkout@v1
+
+      - name: Deploy docs
+        uses: mhausenblas/mkdocs-deploy-gh-pages@master
